--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     />
     <style>
       * {
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
+        margin: 0;
       }
     </style>
     <title>React App</title>
